ParFlatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParFlatte.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> Dec                                     (4)
	Dec -> Type Ident '(' ListArg ')' ':=' Block       (5)
	Dec -> Type Ident                                  (6)
	Dec -> Type Ident ':=' Expr                        (7)
	Arg -> Ident ':' Type                              (8)
	Arg -> Ident ':&' Type                             (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Block -> '{' ListStmt '}'                          (13)
	ListStmt ->                                        (14)
	ListStmt -> Stmt ListStmt                          (15)
	Stmt -> Dec ';'                                    (16)
	Stmt -> Ident ':=' Expr ';'                        (17)
	Stmt -> Ident '++' ';'                             (18)
	Stmt -> Ident '--' ';'                             (19)
	Stmt -> 'return' Expr ';'                          (20)
	Stmt -> 'if' '(' Expr ')' Block                    (21)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (22)
	Stmt -> 'while' '(' Expr ')' Block                 (23)
	Stmt -> 'break' ';'                                (24)
	Stmt -> 'continue' ';'                             (25)
	Stmt -> Expr ';'                                   (26)
	Type -> 'int'                                      (27)
	Type -> 'str'                                      (28)
	Type -> 'bool'                                     (29)
	Type -> '[' ListType ']'                           (30)
	ListType -> Type                                   (31)
	ListType -> Type ',' ListType                      (32)
	Expr6 -> Ident                                     (33)
	Expr6 -> Integer                                   (34)
	Expr6 -> String                                    (35)
	Expr6 -> '[' ListExpr ']'                          (36)
	Expr6 -> Expr6 '^' Integer                         (37)
	Expr6 -> 'true'                                    (38)
	Expr6 -> 'false'                                   (39)
	Expr6 -> 'maybe'                                   (40)
	Expr6 -> Ident '(' ListExpr ')'                    (41)
	Expr6 -> '(' Expr ')'                              (42)
	Expr5 -> '-' Expr6                                 (43)
	Expr5 -> '!' Expr6                                 (44)
	Expr5 -> Expr6                                     (45)
	Expr4 -> Expr4 MulOp Expr5                         (46)
	Expr4 -> Expr5                                     (47)
	Expr3 -> Expr3 AddOp Expr4                         (48)
	Expr3 -> Expr4                                     (49)
	Expr2 -> Expr2 CompOp Expr3                        (50)
	Expr2 -> Expr3                                     (51)
	Expr1 -> Expr2 '&&' Expr1                          (52)
	Expr1 -> Expr2                                     (53)
	Expr -> Expr1 '||' Expr                            (54)
	Expr -> Expr1                                      (55)
	ListExpr ->                                        (56)
	ListExpr -> Expr                                   (57)
	ListExpr -> Expr ',' ListExpr                      (58)
	AddOp -> '+'                                       (59)
	AddOp -> '-'                                       (60)
	MulOp -> '*'                                       (61)
	MulOp -> '/'                                       (62)
	MulOp -> '%'                                       (63)
	CompOp -> '<'                                      (64)
	CompOp -> '<='                                     (65)
	CompOp -> '>'                                      (66)
	CompOp -> '>='                                     (67)
	CompOp -> '=='                                     (68)
	CompOp -> '!='                                     (69)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':'            { PT _ (TS _ 14) }
	':&'           { PT _ (TS _ 15) }
	':='           { PT _ (TS _ 16) }
	';'            { PT _ (TS _ 17) }
	'<'            { PT _ (TS _ 18) }
	'<='           { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'^'            { PT _ (TS _ 25) }
	'bool'         { PT _ (TS _ 26) }
	'break'        { PT _ (TS _ 27) }
	'continue'     { PT _ (TS _ 28) }
	'else'         { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'if'           { PT _ (TS _ 31) }
	'int'          { PT _ (TS _ 32) }
	'maybe'        { PT _ (TS _ 33) }
	'return'       { PT _ (TS _ 34) }
	'str'          { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Dec             rules 5, 6, 7
	Arg             rules 8, 9
	ListArg         rules 10, 11, 12
	Block           rule  13
	ListStmt        rules 14, 15
	Stmt            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26
	Type            rules 27, 28, 29, 30
	ListType        rules 31, 32
	Expr6           rules 33, 34, 35, 36, 37, 38, 39, 40, 41, 42
	Expr5           rules 43, 44, 45
	Expr4           rules 46, 47
	Expr3           rules 48, 49
	Expr2           rules 50, 51
	Expr1           rules 52, 53
	Expr            rules 54, 55
	ListExpr        rules 56, 57, 58
	AddOp           rules 59, 60
	MulOp           rules 61, 62, 63
	CompOp          rules 64, 65, 66, 67, 68, 69

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'['            shift, and enter state 6
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'str'          shift, and enter state 9

	Program        goto state 3
	Dec            goto state 4
	Type           goto state 5

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	':&'           reduce using rule 1
	':='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'||'           reduce using rule 1
	%eof           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> Dec .                                    (rule 4)

	%eof           reduce using rule 4


State 5

	Dec -> Type . Ident '(' ListArg ')' ':=' Block      (rule 5)
	Dec -> Type . Ident                                 (rule 6)
	Dec -> Type . Ident ':=' Expr                       (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 12

State 6

	Type -> '[' . ListType ']'                          (rule 30)

	'['            shift, and enter state 6
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'str'          shift, and enter state 9

	Type           goto state 10
	ListType       goto state 11

State 7

	Type -> 'bool' .                                    (rule 29)

	')'            reduce using rule 29
	','            reduce using rule 29
	']'            reduce using rule 29
	L_Ident        reduce using rule 29


State 8

	Type -> 'int' .                                     (rule 27)

	')'            reduce using rule 27
	','            reduce using rule 27
	']'            reduce using rule 27
	L_Ident        reduce using rule 27


State 9

	Type -> 'str' .                                     (rule 28)

	')'            reduce using rule 28
	','            reduce using rule 28
	']'            reduce using rule 28
	L_Ident        reduce using rule 28


State 10

	ListType -> Type .                                  (rule 31)
	ListType -> Type . ',' ListType                     (rule 32)

	','            shift, and enter state 16
	']'            reduce using rule 31


State 11

	Type -> '[' ListType . ']'                          (rule 30)

	']'            shift, and enter state 15


State 12

	Dec -> Type Ident . '(' ListArg ')' ':=' Block      (rule 5)
	Dec -> Type Ident .                                 (rule 6)
	Dec -> Type Ident . ':=' Expr                       (rule 7)

	'('            shift, and enter state 13
	':='           shift, and enter state 14
	';'            reduce using rule 6
	%eof           reduce using rule 6


State 13

	Dec -> Type Ident '(' . ListArg ')' ':=' Block      (rule 5)

	')'            reduce using rule 10
	L_Ident        shift, and enter state 2

	Ident          goto state 37
	Arg            goto state 38
	ListArg        goto state 39

State 14

	Dec -> Type Ident ':=' . Expr                       (rule 7)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'-'            shift, and enter state 30
	'['            shift, and enter state 31
	'false'        shift, and enter state 32
	'maybe'        shift, and enter state 33
	'true'         shift, and enter state 34
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 18
	Integer        goto state 19
	String         goto state 20
	Expr6          goto state 21
	Expr5          goto state 22
	Expr4          goto state 23
	Expr3          goto state 24
	Expr2          goto state 25
	Expr1          goto state 26
	Expr           goto state 27

State 15

	Type -> '[' ListType ']' .                          (rule 30)

	')'            reduce using rule 30
	','            reduce using rule 30
	']'            reduce using rule 30
	L_Ident        reduce using rule 30


State 16

	ListType -> Type ',' . ListType                     (rule 32)

	'['            shift, and enter state 6
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'str'          shift, and enter state 9

	Type           goto state 10
	ListType       goto state 17

State 17

	ListType -> Type ',' ListType .                     (rule 32)

	']'            reduce using rule 32


State 18

	Expr6 -> Ident .                                    (rule 33)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 41)

	'!='           reduce using rule 33
	'%'            reduce using rule 33
	'&&'           reduce using rule 33
	'('            shift, and enter state 66
	')'            reduce using rule 33
	'*'            reduce using rule 33
	'+'            reduce using rule 33
	','            reduce using rule 33
	'-'            reduce using rule 33
	'/'            reduce using rule 33
	';'            reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'=='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	']'            reduce using rule 33
	'^'            reduce using rule 33
	'||'           reduce using rule 33
	%eof           reduce using rule 33


State 19

	Expr6 -> Integer .                                  (rule 34)

	'!='           reduce using rule 34
	'%'            reduce using rule 34
	'&&'           reduce using rule 34
	')'            reduce using rule 34
	'*'            reduce using rule 34
	'+'            reduce using rule 34
	','            reduce using rule 34
	'-'            reduce using rule 34
	'/'            reduce using rule 34
	';'            reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'=='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	']'            reduce using rule 34
	'^'            reduce using rule 34
	'||'           reduce using rule 34
	%eof           reduce using rule 34


State 20

	Expr6 -> String .                                   (rule 35)

	'!='           reduce using rule 35
	'%'            reduce using rule 35
	'&&'           reduce using rule 35
	')'            reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	']'            reduce using rule 35
	'^'            reduce using rule 35
	'||'           reduce using rule 35
	%eof           reduce using rule 35


State 21

	Expr6 -> Expr6 . '^' Integer                        (rule 37)
	Expr5 -> Expr6 .                                    (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	']'            reduce using rule 45
	'^'            shift, and enter state 65
	'||'           reduce using rule 45
	%eof           reduce using rule 45


State 22

	Expr4 -> Expr5 .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	']'            reduce using rule 47
	'||'           reduce using rule 47
	%eof           reduce using rule 47


State 23

	Expr4 -> Expr4 . MulOp Expr5                        (rule 46)
	Expr3 -> Expr4 .                                    (rule 49)

	'!='           reduce using rule 49
	'%'            shift, and enter state 62
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            shift, and enter state 63
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            shift, and enter state 64
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	']'            reduce using rule 49
	'||'           reduce using rule 49
	%eof           reduce using rule 49

	MulOp          goto state 61

State 24

	Expr3 -> Expr3 . AddOp Expr4                        (rule 48)
	Expr2 -> Expr3 .                                    (rule 51)

	'!='           reduce using rule 51
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'+'            shift, and enter state 59
	','            reduce using rule 51
	'-'            shift, and enter state 60
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	']'            reduce using rule 51
	'||'           reduce using rule 51
	%eof           reduce using rule 51

	AddOp          goto state 58

State 25

	Expr2 -> Expr2 . CompOp Expr3                       (rule 50)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 52)
	Expr1 -> Expr2 .                                    (rule 53)

	'!='           shift, and enter state 51
	'&&'           shift, and enter state 52
	')'            reduce using rule 53
	','            reduce using rule 53
	';'            reduce using rule 53
	'<'            shift, and enter state 53
	'<='           shift, and enter state 54
	'=='           shift, and enter state 55
	'>'            shift, and enter state 56
	'>='           shift, and enter state 57
	']'            reduce using rule 53
	'||'           reduce using rule 53
	%eof           reduce using rule 53

	CompOp         goto state 50

State 26

	Expr -> Expr1 . '||' Expr                           (rule 54)
	Expr -> Expr1 .                                     (rule 55)

	')'            reduce using rule 55
	','            reduce using rule 55
	';'            reduce using rule 55
	']'            reduce using rule 55
	'||'           shift, and enter state 49
	%eof           reduce using rule 55


State 27

	Dec -> Type Ident ':=' Expr .                       (rule 7)

	';'            reduce using rule 7
	%eof           reduce using rule 7


State 28

	Expr5 -> '!' . Expr6                                (rule 44)

	'('            shift, and enter state 29
	'['            shift, and enter state 31
	'false'        shift, and enter state 32
	'maybe'        shift, and enter state 33
	'true'         shift, and enter state 34
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 18
	Integer        goto state 19
	String         goto state 20
	Expr6          goto state 48

State 29

	Expr6 -> '(' . Expr ')'                             (rule 42)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'-'            shift, and enter state 30
	'['            shift, and enter state 31
	'false'        shift, and enter state 32
	'maybe'        shift, and enter state 33
	'true'         shift, and enter state 34
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 18
	Integer        goto state 19
	String         goto state 20
	Expr6          goto state 21
	Expr5          goto state 22
	Expr4          goto state 23
	Expr3          goto state 24
	Expr2          goto state 25
	Expr1          goto state 26
	Expr           goto state 47

State 30

	Expr5 -> '-' . Expr6                                (rule 43)

	'('            shift, and enter state 29
	'['            shift, and enter state 31
	'false'        shift, and enter state 32
	'maybe'        shift, and enter state 33
	'true'         shift, and enter state 34
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 18
	Integer        goto state 19
	String         goto state 20
	Expr6          goto state 46

State 31

	Expr6 -> '[' . ListExpr ']'                         (rule 36)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'-'            shift, and enter state 30
	'['            shift, and enter state 31
	']'            reduce using rule 56
	'false'        shift, and enter state 32
	'maybe'        shift, and enter state 33
	'true'         shift, and enter state 34
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 18
	Integer        goto state 19
	String         goto state 20
	Expr6          goto state 21
	Expr5          goto state 22
	Expr4          goto state 23
	Expr3          goto state 24
	Expr2          goto state 25
	Expr1          goto state 26
	Expr           goto state 44
	ListExpr       goto state 45

State 32

	Expr6 -> 'false' .                                  (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	']'            reduce using rule 39
	'^'            reduce using rule 39
	'||'           reduce using rule 39
	%eof           reduce using rule 39


State 33

	Expr6 -> 'maybe' .                                  (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	']'            reduce using rule 40
	'^'            reduce using rule 40
	'||'           reduce using rule 40
	%eof           reduce using rule 40


State 34

	Expr6 -> 'true' .                                   (rule 38)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	']'            reduce using rule 38
	'^'            reduce using rule 38
	'||'           reduce using rule 38
	%eof           reduce using rule 38


State 35

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	']'            reduce using rule 2
	'^'            reduce using rule 2
	'||'           reduce using rule 2
	%eof           reduce using rule 2


State 36

	String -> L_quoted .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	']'            reduce using rule 3
	'^'            reduce using rule 3
	'||'           reduce using rule 3
	%eof           reduce using rule 3


State 37

	Arg -> Ident . ':' Type                             (rule 8)
	Arg -> Ident . ':&' Type                            (rule 9)

	':'            shift, and enter state 42
	':&'           shift, and enter state 43


State 38

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 41


State 39

	Dec -> Type Ident '(' ListArg . ')' ':=' Block      (rule 5)

	')'            shift, and enter state 40


State 40

	Dec -> Type Ident '(' ListArg ')' . ':=' Block      (rule 5)

	':='           shift, and enter state 80


State 41

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	L_Ident        shift, and enter state 2

	Ident          goto state 37
	Arg            goto state 38
	ListArg        goto state 79

State 42

	Arg -> Ident ':' . Type                             (rule 8)

	'['            shift, and enter state 6
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'str'          shift, and enter state 9

	Type           goto state 78

State 43

	Arg -> Ident ':&' . Type                            (rule 9)

	'['            shift, and enter state 6
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'str'          shift, and enter state 9

	Type           goto state 77

State 44

	ListExpr -> Expr .                                  (rule 57)
	ListExpr -> Expr . ',' ListExpr                     (rule 58)

	')'            reduce using rule 57
	','            shift, and enter state 76
	']'            reduce using rule 57


State 45

	Expr6 -> '[' ListExpr . ']'                         (rule 36)

	']'            shift, and enter state 75


State 46

	Expr6 -> Expr6 . '^' Integer                        (rule 37)
	Expr5 -> '-' Expr6 .                                (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	']'            reduce using rule 43
	'^'            shift, and enter state 65
	'||'           reduce using rule 43
	%eof           reduce using rule 43


State 47

	Expr6 -> '(' Expr . ')'                             (rule 42)

	')'            shift, and enter state 74


State 48

	Expr6 -> Expr6 . '^' Integer                        (rule 37)
	Expr5 -> '!' Expr6 .                                (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	']'            reduce using rule 44
	'^'            shift, and enter state 65
	'||'           reduce using rule 44
	%eof           reduce using rule 44


State 49

	Expr -> Expr1 '||' . Expr                           (rule 54)
